--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -15,6 +15,8 @@
   --sp: #000000;
   --mi: #ff0000;
   --ssk-mon: #fbff00;
+  --ssk: #fbff00;
+  --moneter: #fbff00;
   --market: #dd00ff;
 }
 
@@ -288,6 +290,10 @@ header h1 {
 }
 
 .ssk-mon {
+  background-color: var(--ssk-mon);
+}
+
+.moneter {
   background-color: var(--ssk-mon);
 }
 
