--- a/resources/css/components.css
+++ b/resources/css/components.css
@@ -339,6 +339,7 @@
   background-color: var(--primary-color-light);
   transition: all var(--transition-fast);
   cursor: pointer;
+  border: none;
 }
 
 .tech-section-add:hover {
@@ -422,6 +423,7 @@
   background-color: var(--bg-color);
   transition: all var(--transition-fast);
   cursor: pointer;
+  border: none;
 }
 
 .tech-section-remove:hover {
